--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <li><a href="./CSS-Tasks/css-task7.html" target="_blank">Task 7</a></li>
             </ul>
         </div>
-        <div class="category">
+		<div class="category">
             <h2>Bootstrap Tasks</h2>
             <ul>
                 <li><a href="./Bootstrap-Tasks/bs-task1.html" target="_blank">Task 1</a></li>
@@ -136,10 +136,6 @@
                 <li><a href="./Bootstrap-Tasks/bs-task4.html" target="_blank">Task 4</a></li>
                 <li><a href="./Bootstrap-Tasks/bs-task5.html" target="_blank">Task 5</a></li>
                 <li><a href="./Bootstrap-Tasks/bs-task6.html" target="_blank">Task 6</a></li>
-                <li><a href="./Bootstrap-Tasks/bs-task7.html" target="_blank">Task 7</a></li>
-                <li><a href="./Bootstrap-Tasks/bs-task8.html" target="_blank">Task 8</a></li>
-                <li><a href="./Bootstrap-Tasks/bs-task9.html" target="_blank">Task 9</a></li>
-                <li><a href="./Bootstrap-Tasks/bs-task10.html" target="_blank">Task 10</a></li>
             </ul>
         </div>
         <div class="category">
@@ -151,7 +147,10 @@
                 <li><a href="./JS-Tasks/js-task4.html" target="_blank">Task 4</a></li>
                 <li><a href="./JS-Tasks/js-task5.html" target="_blank">Task 5</a></li>
                 <li><a href="./JS-Tasks/js-task6.html" target="_blank">Task 6</a></li>
-            </ul>
+                <li><a href="./JS-Tasks/js-task7.html" target="_blank">Task 7</a></li>
+                <li><a href="./JS-Tasks/js-task8.html" target="_blank">Task 8</a></li>				
+                <li><a href="./JS-Tasks/Task9/index.html" target="_blank">Task 9</a></li>            
+			</ul>
         </div>
     </div>
 
