--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
         <div class="category">
             <h2>HTML Tasks</h2>
             <ul>
-                <li><a href="task1.html" target="_blank">Task 1</a></li>
-                <li><a href="task2.html" target="_blank">Task 2</a></li>
-                <li><a href="task3.html" target="_blank">Task 3</a></li>
-                <li><a href="task4.html" target="_blank">Task 4</a></li>
-                <li><a href="task5.html" target="_blank">Task 5</a></li>
+                <li><a href="./task1.html" target="_blank">Task 1</a></li>
+                <li><a href="./task2.html" target="_blank">Task 2</a></li>
+                <li><a href="./task3.html" target="_blank">Task 3</a></li>
+                <li><a href="./task4.html" target="_blank">Task 4</a></li>
+                <li><a href="./task5.html" target="_blank">Task 5</a></li>
             </ul>
         </div>
 
