--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
         <div class="category">
             <h2>HTML Tasks</h2>
             <ul>
-                <li><a href="./task1.html" target="_blank">Task 1</a></li>
-                <li><a href="./task2.html" target="_blank">Task 2</a></li>
-                <li><a href="./task3.html" target="_blank">Task 3</a></li>
-                <li><a href="./task4.html" target="_blank">Task 4</a></li>
-                <li><a href="./task5.html" target="_blank">Task 5</a></li>
+                <li><a href="task1.html" target="_blank">Task 1</a></li>
+                <li><a href="task2.html" target="_blank">Task 2</a></li>
+                <li><a href="task3.html" target="_blank">Task 3</a></li>
+                <li><a href="task4.html" target="_blank">Task 4</a></li>
+                <li><a href="task5.html" target="_blank">Task 5</a></li>
             </ul>
         </div>
 
@@ -138,8 +138,20 @@
                 <li><a href="./Bootstrap-Tasks/bs-task6.html" target="_blank">Task 6</a></li>
             </ul>
         </div>
-        
+        <div class="category">
+            <h2>JavaScript Tasks</h2>
+            <ul>
+                <li><a href="./JS-Tasks/js-task1.html" target="_blank">Task 1</a></li>
+                <li><a href="./JS-Tasks/js-task2.html" target="_blank">Task 2</a></li>
+                <li><a href="./JS-Tasks/js-task3.html" target="_blank">Task 3</a></li>
+                <li><a href="./JS-Tasks/js-task4.html" target="_blank">Task 4</a></li>
+                <li><a href="./JS-Tasks/js-task5.html" target="_blank">Task 5</a></li>
+                <li><a href="./JS-Tasks/js-task6.html" target="_blank">Task 6</a></li>
+                <li><a href="./JS-Tasks/js-task7.html" target="_blank">Task 7</a></li>
+                <li><a href="./JS-Tasks/js-task8.html" target="_blank">Task 8</a></li>				
+                <li><a href="./JS-Tasks/Task9/index.html" target="_blank">Task 9</a></li>            
+	    </ul>
+        </div>
     </div>
-
 </body>
 </html>
